# training-trail-utils

./: .gitignore  LICENSE  README.md  bandit.yaml  pyproject.toml  ttu_alias.fish
src/training_trail_utils/: session.py
tests/: test_training_trail_utils.py  tests.py
