[tool.poetry]
name = "training-trail-utils"
version = "0.1.0"
description = "Basic utilities for view datas of trail training"
authors = ["PhilFiftyEight "]
readme = "README.md"
packages = [{include = "training_trail_utils", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
bandit = "^1.7.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.2.1"
addopts = "-vv -rAl -s --cov" # vv -> up verbosity, s -> no capture (for use print), l -> show local variables (shortcut), rA -> show summary report, cov -> coverage
testpaths = [
    "tests",
]